--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,11 +1,32 @@
-  .place__text {
-    grid-column: 2/-1;
-    grid-row: 2/-1;
+  .place {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content);
+    column-gap: 40px;
+    margin-bottom: 80px;
+  }
+
+  .place:last-of-type {
+    margin-bottom: 0;
+  }
+
+  @media screen and (max-width: 860px) {
+    .place {
+      column-gap: 28px;
+    }
   }
 
   @media screen and (max-width: 680px) {
-    .place__text {
-      grid-row: 4/ -1;
-      grid-column: 1;
+    .place {
+      grid-template-columns: minmax(320px, 1fr);
+      grid-template-rows: repeat(4, min-content);
+      margin-bottom: 50px;
+      gap: 0;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .place {
+      grid-template-columns: minmax(300px, 1fr);
     }
   }
